# backend-services-smtp-mailer

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.yml  .pre-commit-config.yaml  .trivyignore-bookworm  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-bookworm  Dockerfile-noble  README.md  REUSE.toml  build.rs  config.toml.example  deny.toml  justfile  mkdocs.yml  renovate.json  test_msgs.txt
.cargo/: config
.reuse/: dep5
ci/: create-container-tags.sh  docs-generate-mail-worker-protocol-schema-and-examples.sh  docs-update-generated-parts.sh
ci/include/: codify.sh
container/: Dockerfile  Dockerfile-bookworm  Dockerfile-noble  Dockerfile-scratch  Dockerfile-trixie
crates/opentalk-mail-worker-protocol/: Cargo.toml
crates/opentalk-mail-worker-protocol/src/: lib.rs
crates/opentalk-mail-worker-protocol/src/v1/: invites.rs  mod.rs
crates/opentalk-smtp-mailer/: Cargo.toml
crates/opentalk-smtp-mailer/resources/locales/de-DE/: main.ftl
crates/opentalk-smtp-mailer/resources/templates/: common_styles.css  data_protection_html.include  data_protection_txt.include  external_event_cancellation.txt  external_invite.txt  header_logo.include  quick_guide_html.include  registered_event_update.txt  registered_uninvite.txt  unregistered_details_html.include  unregistered_invite.txt  unregistered_uninvite.html
crates/opentalk-smtp-mailer/src/: ics.rs  main.rs  settings.rs
crates/opentalk-smtp-mailer/src/mail/: external_event_cancellation.rs  external_event_update.rs  external_invite.rs  external_uninvite.rs  mod.rs  registered_invite.rs  registered_uninvite.rs  unregistered_event_cancellation.rs  unregistered_uninvite.rs
crates/opentalk-smtp-mailer/tests/: preview.rs
crates/opentalk-smtp-mailer/tests/snapshots/: preview__ExternalCancellation-de-Html.snap  preview__ExternalCancellation-en-Html.snap  preview__ExternalInvite-de-Html.snap  preview__ExternalInvite-en-Html.snap  preview__RegisteredCancellation-de-Html.snap  preview__RegisteredCancellation-en-Html.snap  preview__RegisteredEventUpdate-de-Html.snap  preview__RegisteredEventUpdate-de-Plain.snap  preview__RegisteredEventUpdate-en-Html.snap  preview__RegisteredInvite-de-Html.snap  preview__RegisteredInvite-de-Plain.snap  preview__RegisteredInvite-en-Html.snap  preview__RegisteredUninvite-de-Html.snap  preview__RegisteredUninvite-en-Html.snap  preview__UnregisteredCancellation-de-Html.snap  preview__UnregisteredCancellation-en-Html.snap  preview__UnregisteredInvite-de-Html.snap  preview__UnregisteredInvite-en-Html.snap
docs/: README.md  navigation.md
docs/admin/: README.md  configuration.md  frontend.md  languages.md  log_output.md  monitoring.md  rabbitmq.md  smtp.md  statediagram.md  support_contact.md  template_builder.md  templates.md
docs/developer/: README.md  mail_worker_protocol.md  memory-profiling.md
example/: smtp-mailer.toml
extra/: example.toml
resources/locales/de-DE/: main.ftl
resources/locales/en-US/: main.ftl
resources/templates/: README.md  adhoc_html.include  adhoc_txt.include  callin_html.include  callin_txt.include  common_styles.css  data_protection_html.include  data_protection_ics.include  data_protection_txt.include  external_details_html.include  external_event_cancellation.html  external_event_cancellation.txt  external_event_update.html  external_event_update.txt  external_invite.html  external_invite.txt  external_uninvite.html  external_uninvite.txt  header_logo.include  ics_description.txt  invite.html  invite.txt  macros.html  quick_guide_txt.include  registered_details_html.include  registered_event_cancellation.html  registered_event_cancellation.txt  registered_event_update.html  registered_event_update.txt  registered_invite.html  registered_invite.txt  registered_uninvite.html  registered_uninvite.txt  shared_folder_html.include  shared_folder_txt.include  streaming_links_html.include  streaming_links_txt.include  unregistered_event_cancellation.html  unregistered_event_cancellation.txt  unregistered_event_update.html  (+5 more)
src/: i18n.rs  ics.rs  lib.rs  license.rs  mail.rs  main.rs  preview.rs  rabbitmq.rs  settings.rs  worker.rs
src/mail/: external_event_cancellation.rs  external_event_update.rs  external_invite.rs  external_uninvite.rs  mod.rs  registered_event_cancellation.rs  registered_event_update.rs  registered_invite.rs  registered_uninvite.rs  unregistered_event_cancellation.rs  unregistered_event_update.rs  unregistered_invite.rs  unregistered_uninvite.rs
tests/: preview.rs
tests/snapshots/: preview__ExternalCancellation-de-Html.snap  preview__ExternalCancellation-de-Plain.snap  preview__ExternalCancellation-en-Html.snap  preview__ExternalCancellation-en-Plain.snap  preview__ExternalInvite-de-Html.snap  preview__ExternalInvite-de-Plain.snap  preview__ExternalInvite-en-Html.snap  preview__ExternalInvite-en-Plain.snap  preview__RegisteredCancellation-de-Html.snap  preview__RegisteredCancellation-de-Plain.snap  preview__RegisteredCancellation-en-Html.snap  preview__RegisteredCancellation-en-Plain.snap  preview__RegisteredEventUpdate-de-Html.snap  preview__RegisteredEventUpdate-de-Plain.snap  preview__RegisteredEventUpdate-en-Html.snap  preview__RegisteredEventUpdate-en-Plain.snap  preview__RegisteredInvite-de-Html.snap  preview__RegisteredInvite-de-Plain.snap  preview__RegisteredInvite-en-Html.snap  preview__RegisteredInvite-en-Plain.snap  preview__RegisteredUninvite-de-Html.snap  preview__RegisteredUninvite-de-Plain.snap  preview__RegisteredUninvite-en-Html.snap  preview__RegisteredUninvite-en-Plain.snap  preview__UnregisteredCancellation-de-Html.snap  preview__UnregisteredCancellation-de-Plain.snap  preview__UnregisteredCancellation-en-Html.snap  preview__UnregisteredCancellation-en-Plain.snap  preview__UnregisteredInvite-de-Html.snap  preview__UnregisteredInvite-de-Plain.snap  preview__UnregisteredInvite-en-Html.snap  preview__UnregisteredInvite-en-Plain.snap
