# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
build = "build.rs"
description = "Mail Worker that takes mail send tasks from a queue, renders them, and sends them out via SMTP"
edition = "2021"
name = "smtp-mailer"
publish = false
version = "0.11.0"

[dependencies]
# mail-worker-proto = { git = "https://git.heinlein-video.de/heinlein-video/k3k-controller", package = "mail-worker-proto"  }
# mail-worker-proto = { git = "ssh://git@git.heinlein-video.de:222/r.floren/k3k-controller.git", version = "0.1.0", branch = "mails", package = "mail-worker-proto" }
mail-worker-protocol = { version = "0.28.0", package = "opentalk-mail-worker-protocol" }
types = { version = "0.28.0", package = "opentalk-types", features = ["serde"] }
types-common = { version = "0.28.0", package = "opentalk-types-common", features = [
  "serde",
] }

ics-chrono-tz = "0.4"

lapin = { version = "2.1.1", default-features = false }
tokio = { version = "1.18.2", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tokio-executor-trait = "2"
tokio-reactor-trait = "1"

clap = { version = "4.5", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
env_logger = "0.11"
log = "0.4.17"

anyhow = "1.0.57"
async-trait = "0.1.53"
bytes = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10" }
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_path_to_error = "0.1.4"
thiserror = "2.0.0"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }

fluent-templates = { version = "0.11.0", features = ["tera"] }
percent-encoding = "2.1"
phonenumber = "0.3"
tera = { version = "1.15.0", features = ["builtins"] }

css-inline = { version = "0.14.0" }
lettre = { version = "0.11.0", default-features = false, features = [
  "builder",
  "hostname",
  "smtp-transport",
  "tokio1",
  "tokio1-rustls-tls",
] }

ics = { version = "0.5" }
service-probe = "0.2.0"
textwrap = "0.16.0"

[dev-dependencies]
insta = "1.40.0"
pretty_assertions = "1.2.1"
rstest = "0.23.0"

[build-dependencies]
snafu = "0.8.4"
vergen = { version = "9", features = ["build", "cargo", "rustc"] }
vergen-gix = { version = "1" }
