# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
homepage = "https://opentalk.eu/"
repository = "https://gitlab.opencode.de/opentalk/smtp-mailer"
version = "0.12.0-alpha"

[workspace.dependencies]
opentalk-mail-worker-protocol = { path = "crates/opentalk-mail-worker-protocol", version = "0.29.0" }

anyhow = "1.0.57"
async-trait = "0.1.53"
bytes = "1.1.0"
chrono = "0.4"
chrono-tz = "0.10"
clap = "4.5"
config = { version = "0.14", default-features = false }
css-inline = "0.14.0"
env_logger = "0.11"
fluent-templates = "0.13.0"
futures = "0.3.21"
ics = "0.5"
ics-chrono-tz = "0.4"
insta = "1.40.0"
lapin = { version = "2.1.1", default-features = false }
lettre = { version = "0.11.0", default-features = false }
log = "0.4.17"
opentalk-types-common = "0.29.0"
opentalk-version = "0.1.1"
percent-encoding = "2.1"
phonenumber = "0.3"
pretty_assertions = "1.2.1"
rstest = "0.24.0"
serde = "1.0.137"
serde_json = "1.0.81"
serde_path_to_error = "0.1.4"
service-probe = "0.2.0"
snafu = "0.8.4"
tera = "1.15.0"
textwrap = "0.16.0"
thiserror = "2.0.0"
tokio = { version = "1.18.2", default-features = false }
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
url = "2.2.2"
utoipa = "5"
uuid = "1"
vergen = "9"
vergen-gix = "1"

[workspace.lints.clippy]
self_named_module_files = "deny"
